# guardian_bell

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
proto/: admin_service.proto  metrics_service.proto  opentelemetry
src/: app.rs  lib.rs  main.rs  server.rs
src/admin/: server.rs
src/alarm/: alarm.rs  mod.rs  service.rs
src/metrics/: mod.rs  model.rs  server.rs
src/model/: alarm.rs  metrics.rs  mod.rs
src/wal/: mod.rs
tests/: grpc.rs
