[package]
name = "guardian_bell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry-proto = "0.5.0"
prost = "0.12.4"
tokio = { version = "1.37.0", features = ["macros", "test-util", "rt", "rt-multi-thread"] }
tonic = "0.11.0"
tonic-health = "0.11.0"


[build-dependencies]
tonic-build = "0.11"
