[package]
name = "guardian_bell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
prost = "0.12.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
temp-dir = "0.1.13"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["macros", "test-util", "rt", "rt-multi-thread"] }
tonic = "0.11.0"
tonic-health = "0.11.0"
tracing = { version = "0.1.40", features = ["log"] }
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"


[build-dependencies]
tonic-build = "0.11"
